# task-manager

./: .gitignore  LICENSE  README.md  STEP_2_4_SUMMARY.md  STEP_4_1_SUMMARY.md  VALIDATION_CONTEXT_USAGE.md  VALIDATION_UTILS_REFERENCE.md  demo_user_validators.py  demo_validation_utils.py  exceptions.py  models.py  pyproject.toml  requirements.txt  test_exceptions.py  test_exceptions_basic.py  test_method_error_handling_step_5_3.py  test_models.py  test_task_error_handling.py  test_tasklist_step_2_3.py  test_tasklist_step_3_2.py  test_user_step_2_4.py  test_user_step_3_3.py  test_validation_utils.py  test_validation_utils_step_5_4.py  test_validators_step_5_2.py  validation_context_example.py  validation_utils.py  verify_exceptions.py  verify_step_2_4.py
.github/workflows/: test.yml
