[project]
name = "pydantic-v1-demo"
version = "0.1.0"
description = "A demo project using Pydantic v1 for migration demonstrations"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Demo Author", email = "demo@example.com"}
]
dependencies = [
    "pydantic>=1.10.0,<2.0.0",
    "email-validator~=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["."]
omit = ["test_*.py"]

[tool.coverage.report]
show_missing = true
